--- a/react-front/src/App.css
+++ b/react-front/src/App.css
@@ -11,7 +11,7 @@ body {
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 
-    @apply flex flex-col w-screen h-screen p-2 
+    @apply flex flex-col w-full h-screen p-2
     /* bg-slate-600 */
 }
 
@@ -61,7 +61,6 @@ button, input[type="submit"]{
     @apply animate-spin flex w-10 h-1 bg-none
 }
 
-
 .main-content {
     /* this tag is mainly just to make side menu work */
     @apply flex flex-row divide-y-8 my-20
@@ -73,7 +72,7 @@ button, input[type="submit"]{
 }
 .header {
     transition: .5s;
-    @apply flex flex-row w-full items-center justify-between fixed h-10 overflow-hidden 
+    @apply flex flex-row w-full items-center justify-between fixed h-10 overflow-hidden
 }
 
 
